# git-branching-test

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_increment.md  README.md  generated.txt  pyproject.toml
.chglog/: config.yml
.github/workflows/: CI-full.yml  gitstuff.yml  release.yml  test.yml
git_branching_test/: __init__.py  cli.py  main.py
tests/: test_git_main.py
